Events added to project.
 - basic handler for events added to jshp,
 - ajaxGet and ajaxPost added to jshp,
 - clicking on city redirects to proper airport,

--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -76,3 +76,12 @@ p {
 .table-body td {
     border-bottom: 1px solid rgba(0,0,0,0.1);
 }
+
+.table-body td.arrival,
+.table-body td.departure {
+    cursor: pointer;
+}
+
+.table-body tr:hover {
+    background-color: #CCCCCC;
+}
