Rough, but working,  pagination implementation.

--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -85,3 +85,11 @@ p {
 .table-body tr:hover {
     background-color: #CCCCCC;
 }
+
+.pagi-cont {
+	list-style-type: none;
+}
+
+.pagi-item {
+	display: inline-block;
+}
